# high-level-robot-planner

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  README.md  environment.yml  environment_cuda.yml  pyproject.toml  pytest.ini  requirements.txt  requirements.unified.local.txt  setup_env.sh  test_setup.py  todos.txt
.model_context/: PLAN.md  PLAN_GEMINI.md
config/: config.yaml
containers/: Dockerfile  Dockerfile.cluster  Dockerfile.default  Dockerfile.lerobot  Dockerfile.stage12  Dockerfile.stage3  Dockerfile.unified  README.md  build_container.sh  import_and_create_sqsh.sbatch  requirements.unified.txt
docs/: LEROBOT_INTEGRATION_PLAN.md  README.md  action_frame_filtering.md  cluster_samples1_local_trial.md  data_openx_local_indexed_full.md  dataset_adapter_plan.md  dataset_additions_log.md  dataset_metadata.md  hlrp_action_expert.md  job_submission.md  lapa_comparison.md  laq_components_complete.md  laq_encoder_complete.md  laq_pipeline_testing_complete.md  lerobot_integration_comparison.md  local_5090_capacity_2026-02-17.md  lrz_workflow.md  normal_training_guide.md  open_issues.md  openx_local_dataset_inventory.md  oxe_bridge_memory.md  oxe_datasets.md  oxe_local_experiments.md  oxe_throughput_experiments.md  paths_and_caching.md  profiling.md  smolvla_optimization_analysis.md  stage2_cosmos2_tokens.md  stage2_stage3_interface_map.md  submitit_integration.md  test_analysis_plan_compliance.md  validation_refactor_plan.md  validation_system.md  vla_backend_interface.md
experiments/: benchmark_oxe.py
lerobot_policy_hlrp/: README.md  pyproject.toml
lerobot_policy_hlrp/scripts/: check_available.py
lerobot_policy_hlrp/src/lerobot_policy_hlrp/: __init__.py
lerobot_policy_hlrp/src/lerobot_policy_hlrp/policies/: __init__.py
lerobot_policy_hlrp/src/lerobot_policy_hlrp/policies/hlrp_smoke/: __init__.py  configuration_hlrp_smoke.py  modeling_hlrp_smoke.py  processor_hlrp_smoke.py
lerobot_policy_hlrp/src/lerobot_policy_hlrp/policies/hlrp_smoke_b/: __init__.py  configuration_hlrp_smoke_b.py  modeling_hlrp_smoke_b.py  processor_hlrp_smoke_b.py
lerobot_policy_hlrp/src/lerobot_policy_hlrp/policies/hlrp_smolvla_shared/: __init__.py  checkpoint_stats.py  configuration_hlrp_smolvla_shared.py  modeling_hlrp_smolvla_shared.py  processor_hlrp_smolvla_shared.py
scripts/: 0_setup_environment.py  1_videos_to_webdataset.py  2_train_laq.py  2_train_stage1_lam.py  3_generate_latent_labels.py  4_train_foundation.py  4_train_stage2_policy.py  5_finetune_actions.py  5_profile_smolvla.py  6_train_lerobot.py  6_train_lerobot.py.orig  7_rollout_lerobot.py  analyze_batch_mixture.py  bench_flow_supervision.py  bench_hf_dataloader.py  bench_oxe_dataloader.py  bench_oxe_dataloader_detailed.py  bench_oxe_python_prefetch_mixer.py  dataloader_viewer.py  download_lerobot_v3_sources.py  (+10 more)
(+520 files in other folders)
