[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lerobot_policy_hlrp"
version = "0.1.0"
description = "HLRP LeRobot policy bundle."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "lerobot",
  "torch",
]

[project.optional-dependencies]
smoke = []
all = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
